--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "jest": "^24.5.0",
     "nock": "^10.0.6"
   },
+  "peerDependencies": {
+    "codeceptjs": "*"
+  },
   "jest": {
     "setupFilesAfterEnv": [
       "<rootDir>/__tests__/setupTests.js"
